fix: update spacing between elements

--- a/blocks/donation-form/__radiobuttons-container/_for/donation-form__radiobuttons-container_for_donat.css
+++ b/blocks/donation-form/__radiobuttons-container/_for/donation-form__radiobuttons-container_for_donat.css
@@ -3,6 +3,12 @@
   grid-template-columns: repeat(5, 1fr);
 }
 
+@media screen and (max-width: 1439px) {
+  .donation-form__radiobuttons-container_for_donat {
+    column-gap: 10px;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .donation-form__radiobuttons-container_for_donat {
     gap: 16px;
